# CyphGPU

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yaml
cmake/install/: Config.cmake.in
cmake/utils/: CyphGPUShaders.cmake
sample/: .clang-format  CMakeLists.txt
sample/src/cpp/CyphGPU_sample/: Main.cpp  mesh.h  shader.h  texture.h
sample/src/slang/: compile.bat  shader.slang
src/cpp/CyphGPU/: Buffer.cpp  Buffer.hpp  CommandContext.cpp  CommandContext.hpp  CommandContextSlot.cpp  CommandContextSlot.hpp  CommandRecorder.cpp  CommandRecorder.hpp  ComputePassContext.cpp  ComputePassContext.hpp  ComputeShaderState.cpp  ComputeShaderState.hpp  Context.cpp  Context.hpp  ContextSession.cpp  DependencyObject.hpp  Device.cpp  Device.hpp  DeviceSession.cpp  DeviceSession.hpp  DynamicFeatureChain.hpp  FragmentOutputState.cpp  FragmentOutputState.hpp  FragmentShaderState.cpp  FragmentShaderState.hpp  GraphicsPassContext.cpp  GraphicsPassContext.hpp  HashExt.hpp  Image.cpp  Image.hpp  MemoryType.hpp  PassContext.cpp  PassContext.hpp  PreRasterizationShaderState.cpp  PreRasterizationShaderState.hpp  Queue.cpp  Queue.hpp  Resource.cpp  Resource.hpp  Sampler.cpp  (+15 more)
src/cpp/CyphGPU/Buffer/: Buffer.cpp  Buffer.hpp
src/cpp/CyphGPU/Context/: Context.cpp  Context.hpp
src/cpp/CyphGPU/ContextSession/: ContextSession.cpp  ContextSession.hpp
src/cpp/CyphGPU/Device/: Device.cpp  Device.hpp  DynamicFeatureChain.hpp
src/cpp/CyphGPU/DeviceSession/: DeviceSession.cpp  DeviceSession.hpp
src/cpp/CyphGPU/Image/: Image.cpp  Image.hpp
src/cpp/CyphGPU/Pipeline/: FragmentOutputState.cpp  FragmentOutputState.hpp  VertexInputState.cpp  VertexInputState.hpp
src/cpp/CyphGPU/Queue/: Queue.cpp  Queue.hpp
src/cpp/CyphGPU/Sampler/: Sampler.cpp
src/cpp/CyphGPU/Surface/: Surface.cpp  Surface.hpp
src/cpp/CyphGPU/detail/: BumpAllocator.hpp  BumpMemoryResource.hpp  DynamicFeatureChain.hpp  ShaderChainBuilder.cpp  ShaderChainBuilder.hpp
vcpkg/overlay-ports/vulkan-memory-allocator/: portfile.cmake  vcpkg.json
vcpkg/overlay-ports/vulkan-memory-allocator-hpp/: CMakeLists.txt  config.cmake.in  portfile.cmake  vcpkg.json
